--- a/R/econApp/html/00Index.html
+++ b/R/econApp/html/00Index.html
@@ -24,7 +24,9 @@
 <tr><td style="width: 25%;"><a href="calendar.html">calendar</a></td>
 <td>講座 日期</td></tr>
 <tr><td style="width: 25%;"><a href="classes.html">classes</a></td>
-<td>生成課程地圖小卡片</td></tr>
+<td>生成課程地圖(課程名稱)小卡片</td></tr>
+<tr><td style="width: 25%;"><a href="coursemap.html">coursemap</a></td>
+<td>生成課程地圖(分類和背景)卡片</td></tr>
 <tr><td style="width: 25%;"><a href="ebookcard.html">ebookcard</a></td>
 <td>產生電子書可借存量小卡片</td></tr>
 <tr><td style="width: 25%;"><a href="FooterButton.html">FooterButton</a></td>
