--- a/R/econApp/html/classes.html
+++ b/R/econApp/html/classes.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: 生成課程地圖小卡片</title>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: 生成課程地圖(課程名稱)小卡片</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
 <link rel="stylesheet" type="text/css" href="R.css" />
@@ -6,11 +6,11 @@
 
 <table width="100%" summary="page for classes {econApp}"><tr><td>classes {econApp}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
-<h2>生成課程地圖小卡片</h2>
+<h2>生成課程地圖(課程名稱)小卡片</h2>
 
 <h3>Description</h3>
 
-<p>生成課程地圖小卡片
+<p>生成課程地圖(課程名稱)小卡片
 </p>
 
 
